--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ub0cRwSO4p59/Az9IcAbMX8BJtOjESR3BGf4h4MkZ5c=
 APP_DEBUG=true
 APP_URL=http://localhost
 
